# INIDS

./: .env.example  .gitignore  Makefile  PROJECT_UPGRADE_PLAN.md  README.md  pyproject.toml  requirements.txt
data/: inids_ops.db
deploy/compose/: docker-compose.yml
docs/: merge_conflict_playbook.md  operations_runbook.md
src/: __init__.py  analyze_performance.py  auth_service.py  capture_live_traffic.py  detection_service.py  drift_monitor.py  firewall_adapters.py  generate_confusion_matrix.py  ingestion_service.py  label_utils.py  log_parsers.py  metrics_service.py  model_registry.py  ops_store.py  preprocess_train.py  prevention_service.py  rate_limiter.py  realtime_simulation.py  run_demo.py  run_end_to_end_demo.py  schema.py  settings.py  train_all_models.py  train_cli.py  train_model.py
tests/: conftest.py  test_api_detection.py  test_app_import_path.py  test_auth_service.py  test_dashboard_page.py  test_detection_service.py  test_drift_monitor.py  test_firewall_adapters.py  test_frontend_pages.py  test_ingestion_service.py  test_log_parsers.py  test_metrics_service.py  test_model_registry.py  test_ops_store.py  test_preprocess.py  test_prevention_service.py  test_rate_limiter.py  test_run_end_to_end_demo.py  test_schema.py  test_settings.py  test_train_cli.py
web_app/: __init__.py  app.py
web_app/templates/: 404.html  about.html  batch.html  capture.html  dashboard.html  error.html  home.html  index.html  models.html  predict.html  realtime.html
