[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "inids"
version = "0.1.0"
description = "Intelligent Network Intrusion Detection System"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pandas>=2.0.0",
  "scikit-learn>=1.3.0",
  "Flask>=3.0.0",
  "matplotlib>=3.7.0",
  "seaborn>=0.12.0",
  "joblib>=1.3.0",
  "numpy>=1.24.0",
  "pytest>=7.4.0",
  "Werkzeug>=3.0.0",
  "Jinja2>=3.1.0",
  "scapy>=2.5.0",
]

[tool.setuptools]
packages = ["src", "web_app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
